tests/baselines/reference/AmbientModuleAndAmbientWithSameNameAndCommonRoot.errors.txt
class.d.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
module.d.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
module.d.ts(2,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== module.d.ts (2 errors) ====
    declare module A {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module Point {
                      ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export var Origin: {
                x: number;
                y: number;
            }
        }
    }
    
==== class.d.ts (1 errors) ====
    declare module A {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class Point {
            constructor(x: number, y: number);
            x: number;
            y: number;
        }
    }
    
==== test.ts (0 errors) ====
    var p: { x: number; y: number; }
    var p = A.Point.Origin;
    var p = new A.Point(0, 0); // unexpected error here, bug 840000
     